--- a/index.html
+++ b/index.html
@@ -10,19 +10,43 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="app/styles/main.css" />
+
+    <!-- Angular Core -->
     <script src="node_modules/angular/angular.js"></script>
     <script src="node_modules/angular-route/angular-route.js"></script>
+    <script src="node_modules/angular-sanitize/angular-sanitize.js"></script>
+
+    <!-- Módulo Principal -->
     <script src="app/app.module.js"></script>
-    <script src="app/app.route.js"></script>
+
+    <!-- Services -->
     <script src="app/services/auth.service.js"></script>
+    <script src="app/services/user.service.js"></script>
+    <script src="app/services/modal.service.js"></script>
+    <script src="app/services/toast.service.js"></script>
+
+    <!-- Controllers -->
     <script src="app/controllers/login.controller.js"></script>
     <script src="app/controllers/register.controller.js"></script>
     <script src="app/controllers/home.controller.js"></script>
-    <script src="app/services/toast.service.js"></script>
-    <script src="app/components/toast/toast.controller.js"></script>
+
+    <!-- Component Definitions -->
+    <script src="app/components/user-filter/user-filter.component.js"></script>
+    <script src="app/components/user-table/user-table.component.js"></script>
+    <script src="app/components/user-modal/user-modal.component.js"></script>
     <script src="app/components/toast/toast.component.js"></script>
-    <script src="node_modules/angular-sanitize/angular-sanitize.js"></script>
+
+    <!-- Component Controllers -->
+    <script src="app/components/toast/toast.controller.js"></script>
+
+    <!-- Routes -->
+    <script src="app/app.route.js"></script>
   </head>
   <body>
     <app-toast></app-toast>
