route gaurd autentication

--- a/index.html
+++ b/index.html
@@ -41,11 +41,14 @@
     <script src="app/components/user-table/user-table.component.js"></script>
     <script src="app/components/user-modal/user-modal.component.js"></script>
     <script src="app/components/toast/toast.component.js"></script>
+    <script src="app/components/confirm-modal/confirm.modal.component.js"></script>
+    <script src="app/components/logout/logout.component.js"></script>
 
     <!-- Component Controllers -->
     <script src="app/components/toast/toast.controller.js"></script>
 
     <!-- Routes -->
+    <script src="app/app.run.js"></script>
     <script src="app/app.route.js"></script>
   </head>
   <body>
