--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="node_modules/angular/angular.js"></script>
     <script src="node_modules/angular-route/angular-route.js"></script>
     <script src="node_modules/angular-sanitize/angular-sanitize.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.6/ui-bootstrap-tpls.min.js"></script>
 
     <!-- Módulo Principal -->
     <script src="app/app.module.js"></script>
@@ -30,6 +31,7 @@
     <script src="app/services/user.service.js"></script>
     <script src="app/services/modal.service.js"></script>
     <script src="app/services/toast.service.js"></script>
+    <script src="app/services/crypto.service.js"></script>
 
     <!-- Controllers -->
     <script src="app/controllers/login.controller.js"></script>
@@ -50,6 +52,9 @@
     <!-- Routes -->
     <script src="app/app.run.js"></script>
     <script src="app/app.route.js"></script>
+
+    <!--libs-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
   </head>
   <body>
     <app-toast></app-toast>
